# OpenGL

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/laba/: main.cpp
src/laba/res/shaders/: triangle.vert
src/laba01/: main.cpp
src/laba01/res/shaders/: triangle.frag  triangle.vert
src/laba02/: main.cpp
src/laba02/res/shaders/: triangle.vert
src/utils/: shader_utils.cpp  shader_utils.h  texture.cpp  texture.h
